// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.workflow_server;
option go_package = "github.com/chef/automate/api/config/workflow_server";
import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-workflow-server"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Log log = 2;
			bool dev_env = 3;
			Telemetry telemetry = 4;
			ChefServer chef_server = 5;
			Postgresql postgresql = 6;
			SshGit ssh_git = 7;
			google.protobuf.StringValue fqdn = 9;
			google.protobuf.Int32Value api_port = 11 [ (chef.automate.api.port) = { name: "service", default: 9611, protocol: "https" } ];
			google.protobuf.StringValue api_proto = 12;
			google.protobuf.StringValue git_executable = 13;
			google.protobuf.StringValue trusted_certificates_file = 14;
			chef.automate.infra.config.TLSCredentials tls = 15;

			message Log {
				google.protobuf.StringValue level = 1;
			}

		}

		message Service {}

		message ChefServer {
			reserved 4;

			google.protobuf.StringValue url = 1;
			google.protobuf.StringValue web_ui_url = 2;
			google.protobuf.StringValue vip = 3;
			google.protobuf.StringValue chef_user = 5;
		}

		message Postgresql {
			reserved 1 to 4;
			google.protobuf.StringValue db_name = 5;
		}

		message SshGit {
			reserved 5 to 7;

			google.protobuf.StringValue hostname = 1;
			google.protobuf.StringValue host_address = 2;
			google.protobuf.Int32Value  port = 3 [ (chef.automate.api.port) = { name: "git", default: 8989, protocol: "ssh" } ];
			google.protobuf.StringValue git_repo_template = 4;
		}

		message Telemetry {
			google.protobuf.BoolValue enabled = 1;
			google.protobuf.StringValue api = 2;
		}
	}
}
